--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
     druid:
       type: com.alibaba.druid.poll.DruidDataSource
       driverClassName: com.mysql.cj.jdbc.Driver
-      url: jdbc:mysql://110.42.178.191:3306/blog?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&serverTimezone=Asia/Shanghai
+      url: jdbc:mysql://localhost:3306/blog?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&serverTimezone=Asia/Shanghai
       username: root
       password: root
       initial-size: 5
@@ -59,7 +59,7 @@ spring:
 
 
   redis:
-    host: 110.42.178.191
+    host: localhost
     port: 6379
     timeout: 20000
     pool:
@@ -72,7 +72,7 @@ spring:
         #连接池最大阻塞等待时间
       max-wait: -1
 #  rabbitmq:
-#    host: 110.42.178.191
+#    host: localhost
 #    port: 5672
 #    virtual-host: /mall
 #    username: mall
@@ -83,5 +83,5 @@ jwt:
   tokenHead: Bearer
   tokenHeader: Authorization
   expiration: 5184000
-  secret: 秘钥
+  secret: aHR0cHM6Ly9teS5vc2NoaW5hLm5ldC91LzM2ODE4Njg=
 
